Removed option for optimized flags and added field for custom JVM flags